tests/ui/invalid_pyo3imports.stderr
error: invalid import statement
  --> tests/ui/invalid_pyo3imports.rs:18:25
   |
18 | #[pyo3import(py_adders: form adders import addone)]
   |                         ^^^^

error: invalid import statement
  --> tests/ui/invalid_pyo3imports.rs:22:37
   |
22 | #[pyo3import(py_adders: from adders improt addone)]
   |                                     ^^^^^^

error: expected attribute arguments in parentheses: #[pyo3import(...)]
  --> tests/ui/invalid_pyo3imports.rs:26:3
   |
26 | #[pyo3import]
   |   ^^^^^^^^^^

error: invalid import statement: expected a colon (':') after this
  --> tests/ui/invalid_pyo3imports.rs:30:14
   |
30 | #[pyo3import(py_adders from adders import addone)]
   |              ^^^^^^^^^

error: unexpected end of input, expected identifier
  --> tests/ui/invalid_pyo3imports.rs:34:43
   |
34 | #[pyo3import(py_adders: from adders import)]
   |                                           ^
